# torn

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  readme.MD
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docker.yml
config/: default.toml
src/: config.rs  disc.rs  handbrake.rs  main.rs  makemkv.rs  util.rs  web.rs
style/: main.css
templates/: index.html
