[package]
name = "torn"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2018"
description = """
A minimalist DVD/Bru-ray ripper.
"""
documentation = "https://github.com/simonhdickson/torn"
homepage = "https://github.com/simonhdickson/torn"
repository = "https://github.com/simonhdickson/torn"
readme = "readme.MD"
license = "MIT"

[dependencies]
argh = "0.1"
config = { version = "0.10", default-features = false, features = ["toml"] }
pretty_env_logger = "0.4"
failure = "0.1"
futures = "0.3"
heck = "0.3"
humantime-serde = "1.0"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
udev = "0.4"
