[package]
name = "torn"
version = "0.2.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
edition = "2024"
description = """
A minimalist DVD/Bru-ray ripper.
"""
documentation = "https://github.com/simonhdickson/torn"
homepage = "https://github.com/simonhdickson/torn"
repository = "https://github.com/simonhdickson/torn"
readme = "readme.MD"
license = "MIT"

[dependencies]
argh = "0.1"
config = { version = "0.15", default-features = false, features = ["toml"] }
pretty_env_logger = "0.5"
failure = "0.1"
futures = "0.3"
heck = "0.5"
humantime-serde = "1.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.46", features = ["full"] }
toml = "0.9"
udev = "0.9"
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
